force-app/main/default/objects/FrgtHaulingEnrgyUse/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Scope3EmssnSrc.AccountName.Name = &apos;&apos;, &apos;Full Corporate&apos;, Scope3EmssnSrc.AccountName.Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>