force-app/main/default/objects/FrgtHaulingEnrgyUse/fields/Audit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Audit_Flag__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Audit Flag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>