force-app/main/default/objects/FrgtHaulingEnrgyUse/fields/Emissions_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Emissions_Source_Name__c</fullName>
    <formula>Scope3EmssnSrc.Name</formula>
    <label>Emissions Source Name</label>
    <type>Text</type>
</CustomField>